# sloposcope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOYMENT.md  DOCS.md  Dockerfile  IMPROVEMENT_HISTORY.md  IMPROVEMENT_PLAN.md  Makefile  PHASE2_SUMMARY.md  README.md  RESEARCH_BASED_IMPROVEMENT_PLAN.md  SPEC.md  TESTING.md  TODO.md  aggressive_slop_detector.py  app.py  balanced_slop_detector.py  benchmark_performance.py  bert_slop_cli.py  debug_metrics.py  demo_article.txt  demo_results.json  deploy-fly.sh  deploy.sh  docker-compose.yml  enhanced_slop_detector.py  final_slop_detector.py  fly.toml  focused_slop_detector.py  high_slop_improvement_results.json  hybrid_slop_detector.py  improve_template_detection.py  improve_tone_detection.py  performance_improvements.py  production_slop_detector.py  pyproject.toml  pytest-localstack.ini  requirements.txt  (+24 more)
cloudflare/: worker.js  worker.py
docker/: Dockerfile  README.md  docker-compose.yml  setup_localstack.py  terraform.tf
docs/: README.md
examples/: README.md  creative_writing.txt  human_news.txt  simple_human.txt  technical_writing.txt
scripts/: run_tests_with_localstack.py  sloplint_worker.py  start_localstack_for_tests.py
sloplint/: __init__.py  bert_slop_classifier.py  cli.py  combine.py  combine_improved.py  feature_extractor.py  io.py  ml_integration.py  optimized_feature_extractor.py  spans.py
sloplint/aws_worker/: __init__.py  cloudwatch_metrics.py  s3_client.py  sqs_handler.py
sloplint/calibration/: boilerplate_phrases.txt  default_thresholds.toml  entity_transitions.toml  hedging_patterns.txt  mpqa_subjectivity_lexicon.tff
sloplint/features/: __init__.py  coherence.py  complexity.py  density.py  factuality.py  fluency.py  relevance.py  repetition.py  subjectivity.py  templated.py  tone.py  verbosity.py
sloplint/nlp/: __init__.py  optimized_pipeline.py  pipeline.py
templates/: index.html
test_samples/: ai_slop.txt  corporate_slop.txt  creative_writing.txt  extreme_ai_slop.txt  famous_speech.txt  human_news.txt  technical_writing.txt
tests/: add_more_test_texts.py  comprehensive_test_results.json  conftest.py  full_dataset_results.json  simple_test_results.json  test_aws_worker.py  test_cli.py  test_comprehensive_slop_detection.py  test_data_generator.py  test_dataset.json  test_full_dataset.py  test_manual_slop_validation.py  test_simple_slop_validation.py  test_working_slop_detection.py  validation_report.json  working_test_results.json
web/: package-lock.json  package.json  tailwind.config.js  wrangler.toml
web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
web/.next/cache/: .tsbuildinfo
web/.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
web/.next/cache/webpack/edge-server-production/: index.pack
web/.next/cache/webpack/server-production/: 2.pack  index.pack  index.pack.old
web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
web/.next/server/app/: _not-found.html  _not-found.rsc  page.js  page_client-reference-manifest.js
web/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
web/.next/server/app/about/: page.js  page.js.nft.json  page_client-reference-manifest.js
web/.next/server/app/api/: page.js  page_client-reference-manifest.js
web/.next/server/chunks/: 734.js
web/.next/server/pages/: 500.html
web/.next/static/chunks/: main-302283b23dff1336.js  main-app-6a2698b07b00a1f1.js
web/.next/static/chunks/app/: layout-6ace31e7ca84a4a7.js  page-968fb8d41448a1ff.js
web/.next/static/chunks/app/api/: page-6b99260d50ba10ce.js
web/.next/types/app/: layout.ts  page.ts
web/.next/types/app/about/: page.ts
web/.next/types/app/api/: page.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/: page.tsx
web/components/: AnalyzeButton.tsx  DomainSelector.tsx  Footer.tsx  Header.tsx  MetricCard.tsx  OptionsPanel.tsx  ResultsDisplay.tsx  SlopScoreDisplay.tsx  SpansDisplay.tsx  TextAnalyzer.tsx
